build/log/idf_py_stderr_output_260998
Command: make -j 14 all
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c: In function 'app_main':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:85:29: error: 'delay_task' undeclared (first use in this function)
   85 |     xTaskCreatePinnedToCore(delay_task, "processing_task", 10240, NULL, configMAX_PRIORITIES, &delay_task_handle, 1);
      |                             ^~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:85:29: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
